--- a/.golangci.yml
+++ b/.golangci.yml
@@ -26,15 +26,13 @@ linters-settings:
       - hugeParam
   gocyclo:
     min-complexity: 20
-  golint:
-    min-confidence: 0
-  gomnd:
+  mnd:
     settings:
       mnd:
         # don't include the "operation" and "assign"
         checks: argument,case,condition,return
   govet:
-    check-shadowing: true
+    shadow: true
   lll:
     line-length: 140
   maligned:
@@ -53,7 +51,6 @@ linters:
   disable-all: true
   enable:
     - bodyclose
-    - deadcode
     - dogsled
     - dupl
     - errcheck
@@ -66,8 +63,7 @@ linters:
     - gocyclo
     - gofmt
     - goimports
-    - golint
-    - gomnd
+    - mnd
     - goprintffuncname
     - gosec
     - gosimple
@@ -79,13 +75,11 @@ linters:
     - nolintlint
     - rowserrcheck
     - staticcheck
-    - structcheck
     - stylecheck
     - typecheck
     - unconvert
     - unparam
     - unused
-    - varcheck
 
   # don't enable:
   # - asciicheck
