--- a/teller-providers/Cargo.toml
+++ b/teller-providers/Cargo.toml
@@ -21,6 +21,7 @@ default = [
     "google_secretmanager",
     "hashicorp_consul",
     "etcd",
+    "keepass",
 ]
 
 ssm = ["aws", "dep:aws-sdk-ssm"]
@@ -31,6 +32,7 @@ dotenv = ["dep:dotenvy"]
 hashicorp_consul = ["dep:rs-consul"]
 aws = ["dep:aws-config"]
 etcd = ["dep:etcd-client"]
+keepass = ["dep:keepass"]
 
 [dependencies]
 async-trait = { workspace = true }
@@ -65,6 +67,8 @@ rustify = { version = "0.5.3", optional = true }
 rs-consul = { version = "0.6.0", optional = true }
 
 etcd-client = { version = "0.12", optional = true }
+# keepass
+keepass = { version = "0.7.13", optional = true }
 
 [dev-dependencies]
 insta = { workspace = true }
